--- a/addons/csi/vsphere/vsphere-csi-driver.yaml
+++ b/addons/csi/vsphere/vsphere-csi-driver.yaml
@@ -310,7 +310,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: vsphere-csi-controller
-          image: {{ Image "gcr.io/cloud-provider-vsphere/csi/release/driver:v3.1.2" }}
+          image: {{ Image "quay.io/kubermatic/mirror/cloud-provider-vsphere/csi/release/driver:v3.1.2" }}
           args:
             - "--fss-name=internal-feature-states.csi.vsphere.vmware.com"
             - "--fss-namespace=$(CSI_NAMESPACE)"
@@ -375,7 +375,7 @@ spec:
             - name: socket-dir
               mountPath: /csi
         - name: vsphere-syncer
-          image: {{ Image "gcr.io/cloud-provider-vsphere/csi/release/syncer:v3.1.2" }}
+          image: {{ Image "quay.io/kubermatic/mirror/cloud-provider-vsphere/csi/release/syncer:v3.1.2" }}
           args:
             - "--leader-election"
             - "--leader-election-lease-duration=30s"
@@ -521,7 +521,7 @@ spec:
               - --mode=kubelet-registration-probe
             initialDelaySeconds: 3
         - name: vsphere-csi-node
-          image: {{ Image "gcr.io/cloud-provider-vsphere/csi/release/driver:v3.1.2" }}
+          image: {{ Image "quay.io/kubermatic/mirror/cloud-provider-vsphere/csi/release/driver:v3.1.2" }}
           args:
             - "--fss-name=internal-feature-states.csi.vsphere.vmware.com"
             - "--fss-namespace=$(CSI_NAMESPACE)"
