--- a/pkg/resources/test/fixtures/deployment-vsphere-1.30.0-vsphere-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-vsphere-1.30.0-vsphere-cloud-controller-manager-externalCloudProvider.yaml
@@ -42,7 +42,7 @@ spec:
         env:
         - name: SSL_CERT_FILE
           value: /etc/kubermatic/certs/ca-bundle.pem
-        image: gcr.io/cloud-provider-vsphere/cpi/release/manager:v1.30.1
+        image: registry.k8s.io/cloud-pv-vsphere/cloud-provider-vsphere:v1.30.1
         name: cloud-controller-manager
         resources:
           limits:
