--- a/docs/zz_generated.applicationInstallation.ee.yaml
+++ b/docs/zz_generated.applicationInstallation.ee.yaml
@@ -26,7 +26,7 @@ spec:
     # Should be a valid lowercase RFC1123 domain name
     name: my-namespace
   # Values specify values overrides that are passed to helm templating. Comments are not preserved.
-  # Deprecated: Use ValuesBlock instead.
+  # Deprecated: Use ValuesBlock instead. This field was deprecated in KKP 2.25 and will be removed in KKP 2.27+.
   values:
     commonLabels:
       owner: somebody
