Add initial-cni annotation to hiden annotations for UI
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -59,6 +59,7 @@ spec:
                         - kubectl.kubernetes.io/last-applied-configuration
                         - kubermatic.io/initial-application-installations-request
                         - kubermatic.io/initial-machinedeployment-request
+                        - kubermatic.io/initial-cni-values-request
                       description: HiddenAnnotations are the annotations that are hidden from the user in the UI.
                       items:
                         type: string
