--- a/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
@@ -34,6 +34,9 @@ spec:
             chartVersion: v23.9.1
             url: https://helm.ngc.nvidia.com/nvidia
       version: v23.9.1
+  defaultValues:
+    node-feature-discovery:
+      fullnameOverride: gpu-operator-node-feature-discovery
   documentationURL: https://docs.nvidia.com/datacenter/cloud-native/gpu-operator/latest/overview.html
   sourceURL: https://github.com/NVIDIA/gpu-operator/
   logo: |
