fix config format confusion in IAP Helm chart

--- a/charts/iap/templates/configmaps.yaml
+++ b/charts/iap/templates/configmaps.yaml
@@ -19,7 +19,7 @@ kind: ConfigMap
 metadata:
   name: iap-{{ .name }}-configmap
 data:
-  config.yaml: |
+  config.toml: |
 {{- with .config }}
 {{ toToml . | indent 4 }}
 {{ end }}
