Tweak configuration of the kube-state-metrics v2.13.0 addon
* add correct RBAC for mla-monitoring-agent
* remove old scraping annotation (broken with introduction of kube-rbac-proxy)

--- a/addons/kube-state-metrics/kube-state-metrics.yaml
+++ b/addons/kube-state-metrics/kube-state-metrics.yaml
@@ -362,8 +362,7 @@ subjects:
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    prometheus.io/scrape: "true"
+  annotations: null
   labels:
     app.kubernetes.io/component: metrics
     app.kubernetes.io/instance: kube-state-metrics
