--- a/charts/iap/values.yaml
+++ b/charts/iap/values.yaml
@@ -15,14 +15,13 @@
 iap:
   image:
     repository: quay.io/oauth2-proxy/oauth2-proxy
-    tag: v7.4.0
+    tag: v7.7.0
     pullPolicy: IfNotPresent
 
   # list of image pull secret references, e.g.
   # imagePullSecrets:
   #   - name: quay-io-pull-secret
   imagePullSecrets: []
-
 
   # secret which holds the CA certificates that should be used when connecting to the provider
   # custom_provider_ca_secret: provider-ca-secret
@@ -41,13 +40,14 @@ iap:
     #   client_id: alertmanager
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
     #     ## example configuration allowing access only to the mygroup from mygithuborg organization
-    #     github_org: mygithuborg
-    #     github_team: mygroup
+    #     githubConfig:
+    #       org: mygithuborg
+    #       team: "mygroup,mygroup2"
     #     ## do not route health endpoint through the proxy
     #     skip_auth_regex:
     #       - '/-/healthy'
@@ -64,7 +64,7 @@ iap:
     #   client_id: grafana
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
@@ -85,7 +85,7 @@ iap:
     #   client_id: prometheus
     #   client_secret: xxx
     #   encryption_key: xxx
-    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/docs/configuration/overview
+    #   config: ## see https://oauth2-proxy.github.io/oauth2-proxy/configuration/overview
     #     scope: "groups openid email"
     #     email_domains:
     #       - '*'
