--- a/charts/gitops/kkp-argocd-apps/templates/argocd-apps-kkp-core.yaml
+++ b/charts/gitops/kkp-argocd-apps/templates/argocd-apps-kkp-core.yaml
@@ -1,3 +1,17 @@
+# Copyright 2024 The Kubermatic Kubernetes Platform contributors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 {{ if or .Values.seedSettings .Values.seedExtras }}
 ---
 apiVersion: v1
@@ -70,7 +84,7 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: nginx-ingress-controller
-  # ngnix ingress app to be synced automatically so that we can access ArgoCD via it!
+  # nginx ingress app to be synced automatically so that we can access ArgoCD via it!
   syncPolicy:
     automated: {}
 {{ end }}
