--- a/charts/gitops/kkp-argocd-apps/values.yaml
+++ b/charts/gitops/kkp-argocd-apps/values.yaml
@@ -1,3 +1,17 @@
+# Copyright 2024 The Kubermatic Kubernetes Platform contributors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 # customize as per environment
 
 # e.g. test / sandbox / dev / prod
@@ -23,7 +37,7 @@ userMlaValuesFileName: values-usermla.yaml
 
 # KKP Core
 oauth: false
-ngix: false
+nginx: false
 certManager: false
 seedSettings: false
 # If you have any env specific and/or seed specific random yaml files to apply
@@ -53,7 +67,7 @@ loki: false
 minio: false
 
 # TODO: Get these apps setup too
-# Recommeded: if you want more elaborated setup and not have single point of failure 
+# Recommended: if you want more elaborated setup and not have single point of failure 
 # for all kinds of storages e.g. seed as well as user-cluster etcd backup storages, 
 # prometheus, thanos, grafana etc
 minioOperator: false
