support volumebindingmode for kv storage class

--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -375,6 +375,7 @@ spec:
 {{- range  .Cluster.KubeVirtInfraStorageClasses }}
    - infraStorageClassName: {{ .Name }}
      isDefaultClass: {{ .IsDefaultClass }}
+     volumeBindingMode: {{ .VolumeBindingMode }}
      bus: scsi
 {{- end }}
 {{end}}
