--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -76,6 +76,11 @@ spec:
                         : true If missing or false, annotation will be: storageclass.kubernetes.io/is-default-class
                         : false'
                       type: boolean
+                    volumeBindingMode:
+                      description: VolumeBindingMode indicates how PersistentVolumeClaims
+                        should be provisioned and bound. When unset, VolumeBindingImmediate
+                        is used.
+                      type: string
                   required:
                   - infraStorageClassName
                   type: object
@@ -370,6 +375,7 @@ spec:
 {{- range  .Cluster.KubeVirtInfraStorageClasses }}
    - infraStorageClassName: {{ .Name }}
      isDefaultClass: {{ .IsDefaultClass }}
+     volumeBindingMode: {{ .VolumeBindingMode }}
      bus: scsi
 {{- end }}
 {{end}}
