--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -76,6 +76,14 @@ spec:
                         : true If missing or false, annotation will be: storageclass.kubernetes.io/is-default-class
                         : false'
                       type: boolean
+                    labels:
+                      additionalProperties:
+                        type: string
+                      description: Labels is a map of string keys and values that
+                        can be used to organize and categorize (scope and select)
+                        objects. May match selectors of replication controllers and
+                        services.
+                      type: object
                     volumeBindingMode:
                       description: VolumeBindingMode indicates how PersistentVolumeClaims
                         should be provisioned and bound. When unset, VolumeBindingImmediate
@@ -336,7 +344,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: manager
-          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:368063807b26fead1a57b6c2198f077ff0659afb" }}
+          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:b18d6898dcb32dc06c2093b3ad99d564b16686d7" }}
           imagePullPolicy: Always
           command:
             - /manager
@@ -377,5 +385,9 @@ spec:
      isDefaultClass: {{ .IsDefaultClass }}
      volumeBindingMode: {{ .VolumeBindingMode }}
      bus: scsi
+     labels:
+{{- range $key, $value := .Labels }}
+       {{ $key }}: {{ $value }}
+{{- end }}
 {{- end }}
 {{end}}
