--- a/cmd/etcd-launcher/Makefile
+++ b/cmd/etcd-launcher/Makefile
@@ -13,12 +13,15 @@
 # limitations under the License.
 
 export CGO_ENABLED=0
+export GOFLAGS ?= -trimpath
 
 DOCKER_REPO ?= "quay.io/kubermatic"
+LDFLAGS ?= -w -extldflags '-static'
+GOTOOLFLAGS ?= -ldflags '$(LDFLAGS)' -v
 
 .PHONY: build
 build:
-	go build -v -o ./_build/etcd-launcher .
+	go build $(GOTOOLFLAGS) -o ./_build/etcd-launcher .
 
 .PHONY: docker
 docker: build
