--- a/pkg/crd/k8c.io/kubermatic.k8c.io_policytemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_policytemplates.yaml
@@ -44,9 +44,15 @@ spec:
               type: object
             spec:
               properties:
+                category:
+                  description: Category is the category of the policy, specified as an annotation in the Kyverno policy
+                  type: string
                 default:
                   description: Default determines whether we apply the policy (create policy binding)
                   type: boolean
+                description:
+                  description: Description is the description of the policy, specified as an annotation in the Kyverno policy
+                  type: string
                 enforced:
                   description: |-
                     Enforced indicates whether this policy is mandatory
@@ -54,19 +60,47 @@ spec:
                     If true, this policy is mandatory
                     A PolicyBinding referencing it cannot disable it
                   type: boolean
-                policy:
+                policySpec:
                   description: |-
-                    Policy is the policy we want to apply on the cluster
+                    PolicySpec is the policy spec of the Kyverno Policy we want to apply on the cluster.
 
-                    The Policy field contains a Kubernetes resource as a raw extension.
+                    The structure of this spec should follow the rules defined in Kyverno
+                    [Writing Policies Docs](https://kyverno.io/docs/writing-policies/).
+
+                    For example, a simple policy spec could be defined as:
+
+                       policySpec:
+                         validationFailureAction: Audit
+                         background: true
+                         rules:
+                         - name: check-for-labels
+                           match:
+                             any:
+                             - resources:
+                                 kinds:
+                                 - Pod
+                           validate:
+                             message: "The label `app.kubernetes.io/name` is required."
+                             pattern:
+                               metadata:
+                                 labels:
+                                   app.kubernetes.io/name: "?*"
+
+                    There are also further examples of Kyverno policies in the
+                    [Kyverno Policies Examples](https://kyverno.io/policies/).
                   type: object
-                  x-kubernetes-embedded-resource: true
                   x-kubernetes-preserve-unknown-fields: true
                 projectID:
                   description: |-
                     ProjectID is the ID of the project for which the policy template is created
 
                     Relevant only for project visibility policies
+                  type: string
+                severity:
+                  description: Severity indicates the severity level of the policy
+                  type: string
+                title:
+                  description: Title is the title of the policy, specified as an annotation in the Kyverno policy
                   type: string
                 visibility:
                   description: |-
@@ -79,8 +113,10 @@ spec:
                     - cluster
                   type: string
               required:
+                - description
                 - enforced
-                - policy
+                - policySpec
+                - title
                 - visibility
               type: object
           type: object
